# optfuzzilli

./: .gitmodules  README.md
libafl_fuzzilli/: .gitignore  Cargo.toml  README.md  cas.rs  customobs.rs  fzilfile2.fzil  iltms.rs  pss.rs  qs.rs  test.swift
libafl_fuzzilli/src/: lib.rs
optimize_fzil/: Cargo.toml  fzilfile.fzil
