[package]
name = "libafl_fuzzilli"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]
tui = []
std = []

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = 3
debug = true

[lib]
crate-type = ["cdylib", "rlib"]
name = "libafl_fuzzilli"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[[bin]]
name = "test_shmem"

[dependencies]
libafl = "0.14.1" 
libafl_bolts = "0.14.1"
uniffi = { version = "0.27.1", features = ["cli"] }
uniffi_bindgen = "0.27.1"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"   
ahash = "0.8.11"
libc = "0.2"
rand = "0.8"

[build-dependencies]
uniffi = { version = "0.27.1", features = ["build"] }
