[package]
name = "optimize_fzil"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]
tui = []
std = []

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = 3
debug = true

[lib]
crate-type = ["cdylib"]
name = "optimize_fzil"

[[bin]]
# This can be whatever name makes sense for your project, but the rest of this tutorial assumes uniffi-bindgen.
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
libafl = "0.13.0" 
libafl_bolts = "0.13.0"
uniffi = { version = "0.27.1", features = ["cli"] }
uniffi_bindgen = "0.27.1"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"   
ahash = "0.8.11"
rand = "0.8"
#thiserror = "1.0" 

[build-dependencies]
uniffi = { version = "0.27.1", features = [ "build" ] }
